--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Home
 	<p>The projects published from this server will be linked from the project's official landing page, usually on <a target="_blank" href="https://www.nist.gov">www.nist.gov</a>, but the following is a partial list of featured sites:
 
 	<ul>
+	  <li><a target="_blank" href="https://pages.nist.gov/800-63-3">usnistgov/800-63-3</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/cfast">usnistgov/cfast</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/chimad-phase-field">usnistgov/chimad-phase-field</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/cpspwg">usnistgov/cpspwg</a>
