change repo for fds-smv

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home
 	  <li><a target="_blank" href="https://pages.nist.gov/cfast">usnistgov/cfast</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/chimad-phase-field">usnistgov/chimad-phase-field</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/cpspwg">usnistgov/cpspwg</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/fds-smv">firemodels/fds-smv</a>
+	  <li><a target="_blank" href="https://pages.nist.gov/fds-smv">firemodels/fds</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonFiltering">usnistgov/OpenSeadragonFiltering</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonPixelColor">usnistgov/OpenSeadragonPixelColor</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonScalebar">usnistgov/OpenSeadragonScalebar</a>
