fix link names for fds-smv and cfast

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@ title: Home
 
 	<ul>
 	  <li><a target="_blank" href="https://pages.nist.gov/800-63-3">usnistgov/800-63-3</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/cfast">usnistgov/cfast</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/chimad-phase-field">usnistgov/chimad-phase-field</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/cpspwg">usnistgov/cpspwg</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/fds-smv">firemodels/fds</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonFiltering">usnistgov/OpenSeadragonFiltering</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonPixelColor">usnistgov/OpenSeadragonPixelColor</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonScalebar">usnistgov/OpenSeadragonScalebar</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/sctools">usnistgov/sctools</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/smartcitiesarchitecture">usnistgov/smartcitiesarchitecture</a>
 	  <li><a target="_blank" href="https://pages.nist.gov/TEChallenge">usnistgov/TEChallenge</a>
+	  <li><a target="_blank" href="https://pages.nist.gov/fds-smv">firemodels/fds-smv</a>
+	  <li><a target="_blank" href="https://pages.nist.gov/cfast">firemodels/cfast</a>
 	</ul>
 </section>
