Create a plugin to generate a complete list of hosted repos

--- a/index.html
+++ b/index.html
@@ -9,24 +9,10 @@ title: Home
 	<p>This is the root of NIST's GitHub Pages-equivalent site.
 	<p>This server has been created with a stripped-down version of <a target="_blank" href="https://github.com/18F">18F's</a> <a target="_blank" href="https://github.com/18F/pages-server">pages-server</a> code, which is intended to mimic the functionality of GitHub Pages (github.io) on a self-hosted server.  This is required because the native GitHub functionality does not meet current Federal Government website requirements as well as the requirements of NIST's own IT Security Officer for hosting official web pages.
 
-	<p>NIST users wishing to publish web sites using this service should first review the GitHub Rules of Behavior, and can find instructions for using it by searching the NIST internal web server for "github".  NIST users wishing to add their site to the featured site list below should submit a pull request to the <a target="_blank" href="https://github.com/usnistgov/pages-root">usnistgov/pages-root</a> repo.
-
 	<p>The source code for this page is available in the <a target="_blank" href="https://github.com/usnistgov/pages-root">pages-root GitHub repository</a>
 
-	<p>The projects published from this server will be linked from the project's official landing page, usually on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a partial list of featured sites:
+	<p>The projects published from this server will be linked from the project's official landing page, usually on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
 
-	<ul>
-	  <li><a target="_blank" href="https://pages.nist.gov/netzero">usnistgov/netzero</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/800-63-3">usnistgov/800-63-3</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/chimad-phase-field">usnistgov/chimad-phase-field</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/cpspwg">usnistgov/cpspwg</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonFiltering">usnistgov/OpenSeadragonFiltering</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonPixelColor">usnistgov/OpenSeadragonPixelColor</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/OpenSeadragonScalebar">usnistgov/OpenSeadragonScalebar</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/sctools">usnistgov/sctools</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/smartcitiesarchitecture">usnistgov/smartcitiesarchitecture</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/TEChallenge">usnistgov/TEChallenge</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/fds-smv">firemodels/fds-smv</a>
-	  <li><a target="_blank" href="https://pages.nist.gov/cfast">firemodels/cfast</a>
-	</ul>
+{% repolist %}
+
 </section>
