--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@ title: Home
   <h1>NIST Pages</h1>
 </section>
 <section class="home-about">
-	<p>This is the root of NIST's GitHub Pages-equivalent site.
-	<p>This server has been created with a stripped-down version of <a target="_blank" href="https://github.com/18F">18F's</a> <a target="_blank" href="https://github.com/18F/pages-server">pages-server</a> code, which is intended to mimic the functionality of GitHub Pages (github.io) on a self-hosted server.  This is required because the native GitHub functionality does not meet current Federal Government website requirements as well as the requirements of NIST's own IT Security Officer for hosting official web pages.
+	<h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 
-	<p>The source code for this page is available in the <a target="_blank" href="https://github.com/usnistgov/pages-root">pages-root GitHub repository</a>
+	<p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a> For more information about using NIST Pages (mostly only relevant to NIST staff) visit
 
-	<p>The projects published from this server will be linked from the project's official landing page, usually on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
+	<p>The projects published from this server should be linked from the project's official landing page, usually in Drupal on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
 
 {% repolist %}
 </section>
