--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 <section class="home-about">
 	<h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 
-	<p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a> For more information about using NIST Pages (mostly only relevant to NIST staff) visit
+	<p>Visit the <strong><a href="https://github.com/usnistgov/pages-root/wiki">wiki</a></strong> for more information about using NIST Pages (mostly only relevant to NIST staff).
 
 	<p>The projects published from this server should be linked from the project's official landing page, usually in Drupal on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
 
