Add note about how to set descriptions

--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@ title: Home
 	<p>The projects published from this server should be linked from the project's official landing page, usually in Drupal on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
 
 {% repolist %}
+
+	<p>NOTE: the descriptions above are extracted from each repo's &lt;title&gt; tag.
 </section>
