--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@ layout: default
 title: Home
 ---
 <section class="home home-title">
-  <h1>NIST Pages</h1>
+  <h1>NIST Pages</h1><hr>
 </section>
 <section class="home-about">
 	<h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 
-	<p>Visit the <strong><a href="https://github.com/usnistgov/pages-root/wiki">wiki</a></strong> for more information about using NIST Pages (mostly only relevant to NIST staff).
+	<br>
+	<p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a> for more information about using NIST Pages (mostly only relevant to NIST staff).
 
 	<p>The projects published from this server should be linked from the project's official landing page, usually in Drupal on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
 
+	<p>NOTE: the descriptions below are extracted from each repo's &lt;title&gt; tag.
+
 {% repolist %}
 
-	<p>NOTE: the descriptions above are extracted from each repo's &lt;title&gt; tag.
 </section>
