--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@ title: Home
   <h1>NIST Pages</h1><hr>
 </section>
 <section class="home-about">
-	<h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
+<h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 
-	<br>
-	<p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a> for more information about using NIST Pages (mostly only relevant to NIST staff).
+<br>
+<p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a>
+for more information about using NIST Pages (mostly only relevant to NIST staff).
 
-	<p>The projects published from this server should be linked from the project's official landing page, usually in Drupal on <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following is a complete list of sites hosted on this server:
+<p>The projects published from this server should be linked from the project's
+official landing page, usually in Drupal on
+<a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following
+is a complete list of sites hosted on this server.  Newly-created sites may not
+appear on this list for several hours.
 
-	<p>NOTE: the descriptions below are extracted from each repo's &lt;title&gt; tag.
+<p>NOTE: the descriptions below are extracted from each repo's &lt;title&gt; tag.
 
 {% repolist %}
 
