Minor cosmetic tweaks

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@ layout: default
 title: Home
 ---
 <section class="home home-title">
-  <h1>NIST Pages</h1><hr>
+  <h2>NIST Pages</h2><hr>
 </section>
 <section class="home-about">
 <h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 <p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a>
-for more information about using NIST Pages (mostly only relevant to NIST staff).
+for more information about using NIST Pages (mostly only relevant to NIST staff).</p>
 
 <p>The projects published from this server should be linked from the project's
 official landing page, usually in Drupal on
 <a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following
 is a complete list of sites hosted on this server.  Newly-created sites may not
-appear on this list for several hours.
+appear on this list for several hours.</p>
 
-<p>NOTE: the descriptions below are extracted from each repo's &lt;title&gt; tag.
+<p>NOTE: the descriptions below are extracted from each repo's &lt;title&gt; tag.</p>
 
 {% repolist %}
 
