--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <section class="home home-title">
   <h2>NIST Pages</h2><hr>
 </section>
-<section class="home-about">
+<section class="home home-about">
 <h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 <br>
 <p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a>
@@ -18,7 +18,7 @@ is a complete list of sites hosted on this server.  Newly-created sites may not
 appear on this list for several hours.</p>
 <br>
 <p>NOTE: the descriptions below are extracted from each repo's &lt;title&gt; tag.</p>
-
+</section>
+<section>
 {% repolist %}
-
 </section>
