Too many confusing classes...

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <section class="home home-title">
   <h2>NIST Pages</h2><hr>
 </section>
-<section class="home home-about">
+<section>
 <h3>This is the root of NIST's GitHub Pages-equivalent site.</h3>
 <br>
 <p>Visit the <a href="https://github.com/usnistgov/pages-root/wiki">wiki</a>
