Make links https: and replace redirected URLs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ for more information about using NIST Pages (mostly only relevant to NIST staff)
 <br>
 <p>The projects published from this server should be linked from the project's
 official landing page, usually in Drupal on
-<a target="_blank" href="http://www.nist.gov">www.nist.gov</a>, but the following
+<a target="_blank" href="https://www.nist.gov">www.nist.gov</a>, but the following
 is a complete list of sites hosted on this server.  Newly-created sites may not
 appear on this list for several hours.</p>
 <br>
